	PR lto/84805 	* ipa-devirt.c (odr_subtypes_equivalent_p): Do not get the ODR type of 	incomplete types.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258481 138bc75d-0d04-0410-961f-82ee72b054a4